--- a/src/styles/ease/ease-import.scss
+++ b/src/styles/ease/ease-import.scss
@@ -4,5 +4,5 @@
  * Only this file should be imported by components!
  */
 
-@import './_mixins.scss';
-@import './_variables.scss';
+@import "./_mixins.scss";
+@import "./_variables.scss";
