--- a/src/styles/ease/ease-styles.scss
+++ b/src/styles/ease/ease-styles.scss
@@ -3,9 +3,9 @@
  * It should never be imported more than once! ☝️
  */
 
-@import './_reset.scss';
-@import './_colors.scss';
-@import './_typography.scss';
+@import "./_reset.scss";
+@import "./_colors.scss";
+@import "./_typography.scss";
 
 body,
 html {
