--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,4 +7,31 @@
     justify-content: center;
     align-items: center;
   }
+  .sorting-information {
+    max-width: 60%;
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+    gap: 12px;
+    span {
+      height: fit-content;
+      margin: auto auto auto 0;
+    }
+    button {
+      background-color: #ebf5ff;
+      border: none;
+      padding: 12px;
+      border-radius: 12px;
+      color: #5576aa;
+      cursor: pointer;
+      font-size: 16px;
+      &:active {
+        border: 2px solid #5576aa;
+        background-color: #d3dce5;
+      }
+      &:hover {
+        background-color: #d3dce5;
+      }
+    }
+  }
 }
