--- a/src/app/components/user-item/user-item.component.scss
+++ b/src/app/components/user-item/user-item.component.scss
@@ -54,6 +54,9 @@
         margin-left: 12px;
         text-align: right;
         width: 80px;
+        height: fit-content;
+        margin-top: auto;
+        margin-bottom: auto;
         @media only screen and (max-width: 600px) {
           text-align: left;
         }
